2010-01-25  vadim  <vadim@vk.crocodile.org>

	* ../src/fwbuilder/ObjectMatcher.h (libfwbuilder): setting all
	flags through setter methods instead of passing parameters to
	constructor. Added flag "match_subnets"

2010-01-19  vadim  <vadim@vk.crocodile.org>

	* Compiler.cpp (Compiler::_expand_interface): method
	_expand_interface (renamed, used to be _expandInterface) takes
	pointer to the rule as first argument. This makes it possible
	to generate error and warning messages associated with rules.

2010-01-18  vadim  <vadim@vk.crocodile.org>

	* ../VERSION (LIBFWBUILDER_REVISION): Set version to 4.0.0 in
	preparation for public beta

2010-01-17  vadim  <vadim@vk.crocodile.org>

	* FWObjectDatabase_15.xslt: incremented DTD version to 16,
	migration script changes value attribute "host_OS" of Firewall
	element from "linksys" to "sveasoft".

2010-01-15  vadim  <vadim@vk.crocodile.org>

	* AddressTable::loadFromSource , DNSName::loadFromSource : When
	address table file needed to resolve AddressTable object can not
	be found, the object uses dummy test address but also sets an
	attribute ".error_msg" in this object to indicate that there was
	an error and the object is not real.

	* Compiler.cpp (checkForObjectsWithErrors::processNext): Rule
	processor Compiler::checkForObjectsWithErrors was added to check
	for the ".error_msg" attributes and translate them into error
	messages that can be associated with rules. This way, Preprocessor
	can convert MultiAddress objects without having to scan all rules
	which makes it faster and we still can associate errors that
	happen during this process with rules.

2010-01-09  vadim  <vadim@vk.crocodile.org>

	* DNSName.cpp (DNSName::loadFromSource): method loadFromSource()
	now takes second argument "bool test_mode". When compiler runs in
	a test mode, it passes true in this argument to loadFromSource()
	to make it use dummy ip address in case it can not resolve
	requested DNS record. This helps test compiler on data files that